--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "qw115-syntax",
   "theme": "syntax",
   "version": "0.1.1",
-"description": "เว็บบาทละ100✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
+"description": "จะซื้อลอตเตอรี่ออนไลน์✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
 "keywords": [
-"เว็บบาทละ100",
-"หวยรัฐบาลออนไลน์",
-"เข้าระบบ lottovip",
-"เว็บหวยฮานอยหวยลาว",
-"lottovipรวยออนไลน์"
+"จะซื้อลอตเตอรี่ออนไลน์",
+"เว็บหวยทุกหวย",
+"lottovip ruay",
+"เล่นหวยผ่านเว็บ",
+"สด หวยออมสิน"
 ],
   "repository": "https://github.com/setteebet/qw115-syntax.git",
   "license": "MIT",
