--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qw115-syntax",
+  "name": "จะซื้อลอตเตอรี่ออนไลน์ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "จะซื้อลอตเตอรี่ออนไลน์✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
